app.css
/* ... */
.nav__bar--input:hover {
    border: 1px solid #E1E1E1;
}

.nav__bar--input:active, .nav__bar--input:focus {
    border: 2px solid white;
}

.nav__bar--full {
    color: white;
}

.icon__box {
    display: flex;
    align-items: center;
}

.icon__box:hover {
    background: none;
}

.mini-icon {
    width: 1.25rem;
    height: 1.25rem;
}

.search {
    padding: .2rem;
}

.nav__bar--text {
    display: flex;
    align-items: center;
}

.nav__bar--full {
    display: none;
}

.nav__bar--initials {
    padding: .4rem;
    margin: auto;
    font-weight: 500;
    font-size: .75rem;
    background-color: #36FBA1;
    border-radius: 8px;
    line-height: .9rem;
}

.nav__list {
    list-style-type: none;
    padding: 0;
    margin: 0;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   
}

.nav__bar--list {
    position: absolute;
    height: 0;
}

.nav__list, .notif__box {
    visibility: hidden;
    opacity: 0;
    height: 0;
    position: relative;
}

.nav__list--visible, .notif__box--visible {
    opacity: 1;
    visibility: visible;
    height: auto;
    position: absolute;
    border: 1px solid #DBDBDB;
    border-radius: 14px;
    background: #FFFFFF;
    transition: opacity 1s;
    z-index: 100;
}

.nav__list--visible {
    padding: 6px 0px 6px 0px;
    width: 320px;
    top: 4rem;
    left: 3.125rem;
}

.notif__box--visible {
    width: 320px;
    top: 7.25rem;
    left: 3.125rem;
    padding: 1rem;
}

.nav__link {
    text-decoration: none;
    color: #303030;
}

.nav__list--primary, .nav__list--secondary {
    padding: 0px .375rem 0px .375rem;
    display: none;
}

.nav__item {
    font-weight: 400;
    font-size: .81rem;
    text-align: left;
    display: flex;
    align-items: center;
    gap: .5rem;
    border-radius: 8px;
    padding: .375rem;
}

.nav__list--secondary .nav__item {
    padding: .5rem;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 0;
}

.nav__link--tiny {
    font-size: .75rem;
    line-height: .95rem;
    text-decoration: none;
    color: #616161;
}

.my__store {
    border-bottom: .75px solid #E1E1E1;
}

.nav__list--secondary {
    border-top: .75px solid #E1E1E1;
}

.nav__bar--list .nav__bar--initials {
    margin: 0;
}

.nav__bar--text {
    padding: .25rem .75rem .25rem .5rem;
}

.nav__list svg path{
    fill: #303030;
}

.nav__list svg {
    width: 25px;
    height: 25px;
}

.nav__bar--list .nav__bar--full {
    display: block;
    font-size: .81rem;
    font-weight: 600;
    line-height: 1.125rem;
}

.nav__bar--list .nav__bar--text:hover, .nav__item:hover {
    background: #F1F1F1;
}


/*TODO: Combine Pseudoclasses*/
.icon__box:active, .nav__bar--text:active {
    background: #616161;
}

.icon__box:focus, .nav__bar--text:focus, .cust__button:focus, .custom:focus {
    background: #616161;
    box-shadow: 0px 0px 0px 2px #005BD3;
}

.cust__button:hover {
    background: linear-gradient(0deg, #2A2A2A, #2A2A2A);
    box-shadow: 0px 0px 0px 1.5px #333333;
    border-width: 1.5px 1.5px 0px 1.5px;
    border-style: solid;
    border-color: #FFFFFF33;   
}

.cust__button:active {
    background: #2B2B2B;
}

.box {
    position: relative;
}

.notif {
    height: 0;
}

.notif__box {
    color: #0000000D;
    box-shadow: 0px 4px 8px 0px #0000000D;
}

.notif__head {
    display: flex;
    justify-content: space-between;
}

.alerts {
    font-size: .875rem;
    font-weight: 600;
    line-height: 1.3rem;
    color: #303030;
}
/* ... */

